--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,49 +3,34 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-.glyphicon {
-	display:block;
-}
-
 #full_imgs {
-	width:100%;
-	height:content;
 	overflow:hidden;
 	white-space:nowrap;
-	padding:5px;
-	float:left;
+	width:100%;
 }
 
-.full_img {
-	width:100%;
-	height:100%;
+.full_img{
+	width:33%;
+	padding-left:33%;
+	padding-right:34%;
 	display:inline-block;
 	float:none;
 }
 
-#thumbnail_imgs {
-	width:100%;
-	height:content;
+#thumb_imgs {
 	overflow:hidden;
 	white-space:nowrap;
+	width:100%;
 	padding:5px;
-	float:left;
 }
 
-#thumbnail_imgs:hover{
+#thumb_imgs:hover {
 	overflow:auto;
 }
 
-.thumbnail_img {
-	width:50px;
-	height:50px;
+.thumb_img{
 	display:inline-block;
 	float:none;
-}
-
-.carousel-control {
-	background:none !important;
-	filter:progid:none !important;
 }
 
 a {
